# ndshape-rs

./: Cargo.toml  README.md
src/: const_shape.rs  lib.rs  runtime_shape.rs  shape.rs
