[package]
name = "ndshape"
description = "Simple, fast linearization of N-dimensional array indices"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bonsairobo/ndshape-rs"
keywords = ["array", "multidimensional"]

[dependencies]
static_assertions = "1.1"
